module9/ingress_cqhttpserver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cqhttpserver 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - cqhttp.com
      secretName: cqhttp-tls
  rules:
    - host: cqhttp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cqhttpserver
                port:
                  number: 9999
